# RustFEA

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  mesh.vtk  readVector.m  todo.md
.github/workflows/: benchmark.yml  build.yml  rust.yml
benches/: direct_solve.rs  explicit_contact.rs  main.rs
examples/: bar.sim  bar_contact.toml  bar_contact_benchmark.toml  circle_pull.geo  circle_pull.sim  circle_pull.toml  circle_pull_benchmark.toml  circle_pull_benchmark_quick.toml  curved_bar.sim  curved_bar.toml  hertz_contact.toml  mesh_2.vtk  torque_example.toml  tube.geo  tube.sim  tube.toml  tube_benchmark.toml  tube_curved.sim
examples/mesh_src/: bar.geo  bar_contact.geo  circle_pull.geo  curved_bar.geo  dog_bone.geo  hertz.geo  hertz.geo.opt  sphere_contact.geo
examples/meshes/: .gitignore  bar_block.inp  example_tube.inp.xz  hertz.inp
helpers/: count_errors.py  derive_eight_node.py  parallel_benchmark.py  parallel_benchmark_plotter.py  plot_matrix.py  solve_test.m  tripletToSparse.m
src/: lib.rs  main.rs  mesh.rs  mesh_generation.rs  node.rs  simulation.rs  solver.rs  utilities.rs  utils.rs
src/bc/: condition.rs  contact.rs  fixed.rs  force.rs  mod.rs  pressure.rs  torque.rs  traction.rs
src/elements/: base_element.rs  brick_element.rs  four_node_element.rs  mod.rs  tetrahedral_element.rs
src/io/: file.rs  input_reader.rs  matrix_writer.rs  mesh_reader.rs  mod.rs  project.rs  vtk_writer.rs
src/simulation/: base.rs  load_computation.rs  mod.rs  utils.rs
test/: import_inp.rs  main.rs  write_hdf.rs
