[package]
name = "rust_fea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
nalgebra-sparse = "*"
russell_sparse = "0.5.0"
russell_lab = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
xz2 = "0.1"
typetag = "0.2"
bincode = "1.3"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[lints.rust]
unused = "allow"
non_snake_case = "allow" #nice for fea vars


[[test]]
name = "integration_tests"
path = "test/main.rs"